# terminal_chat

./: .gitignore  Cargo.toml  README.md  Title: "TARS in Interstellar: Versatile and Adaptive Robot with Distinctive Personality".md  rust_chain.sh  todo.txt
.github/workflows/: build_and_release.yml  rust.yml
reports/: "7 Essential Tips to Streamline Your Airport Experience".md  "Enhance Readability with 'bat' for Syntax-Highlighted File Viewing".md  "Styling and Printing Markdown with Termimad in Rust".md  Redis: High-Performance In-Memory Data Store for Real-Time Applications.md  Resolving Quotation Mark Errors in Console Commands.md
src/: chat_client.rs  commands.rs  commands_registry.rs  conversation.rs  main.rs  message_printer.rs  messages.rs  preview_md.rs  run.rs  spinner.rs  tc_config.rs  utils.rs
src/commands/: change_model.rs  clear.rs  clear_config.rs  command_context.rs  command_tc.rs  commands_registry.rs  debug.rs  document.rs  edit_config.rs  gf.rs  handle_commands.rs  help.rs  image.rs  load_conversation.rs  mod.rs  quit.rs  readme.rs  save_conversation.rs  sh.rs  start_rmr.rs
