[package]
name = "tc"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
debug = false
incremental = false

[dependencies]
walkdir = { version = "2.5.0" }
crossterm = { version = "0.28.1" }
futures-util = { version = "0.3.31" }
linefeed = { version = "0.6.0" }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
pulldown-cmark = "=0.13.0"
