[package]
name = "tc"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
debug = false
incremental = false

[dependencies]
crossterm = { version = "0.28.1" }
futures-util = { version = "0.3.31", default-features = false }
linefeed = { version = "0.6.0", default-features = false }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", default-features = false }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"], default-features = false }
pulldown-cmark = { version = "0.13.0", default-features = false }
dirs = { version = "6.0.0", default-features = false }
termsize = { version = "0.1.9", default-features = false }
